--- a/gym/src/main/resources/application.properties
+++ b/gym/src/main/resources/application.properties
@@ -1,7 +1,1 @@
-spring.application.name=gym
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.jpa.show-sql=true
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-spring.data.rest.base-path=/api
+spring.profiles.active=prod
